--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,12 @@
     <string name="menu_memory">跌倒記錄查詢\n</string>
     <string name="menu_calender">行事曆紀錄</string>
     <string name="menu_user">使用者資料</string>
+    <string name="menu_registration">註冊介面</string>
+    <string name="menu_calender_thing">行事曆事件</string>
+    <string name="menu_medicine_allbox">藥物總攬查詢</string>
+    <string name="menu_user_like">最愛收藏</string>
+    <string name="menu_user_memory">活動紀錄</string>
+    <string name="menu_user_data">個人檔案</string>
+    <string name="menu_user_set">系統設定</string>
+
 </resources>
