--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,27 @@
     <string name="menu_user_data">個人檔案</string>
     <string name="menu_user_set">系統設定</string>
 
+    <string name="Calender_thing">行事曆事件輸入</string>
+    <string name="thing_name">事件名稱</string>
+    <string name="start_day">起始日期</string>
+    <string name="end_day">結束日期</string>
+    <string name="start_time">起始時間</string>
+    <string name="end_time">結束時間</string>
+    <string name="thing_people">事件對象</string>
+    <string name="thing_illustrate">事件說明</string>
+    <string name="thing_save">保存事件</string>
+    <string name="thing_edit">繼續編輯</string>
+
+    <string name="registration_form">註冊表單</string>
+    <string name="user_name">使用者名稱</string>
+    <string name="password">密碼</string>
+    <string name="real_name">姓名</string>
+    <string name="phone">電話</string>
+    <string name="address">住址</string>
+    <string name="mail">信箱</string>
+    <string name="birthday_vid">生日(西元)</string>
+
+
+
+
 </resources>
