--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="menu_emergency_contact">緊急連絡人</string>
     <string name="menu_forget_password">忘記密碼</string>
 
+    <string name="enter_email">請輸入您的電子郵件</string>
+    <string name="please_enter_email">請輸入您註冊時使用的電子郵件地址</string>
+    <string name="send_out">送出</string>
+
     <string name="Calender_thing">行事曆事件輸入</string>
     <string name="thing_name">事件名稱</string>
     <string name="start_day">起始日期</string>
