--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,11 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
+
+    <string name="mail_for_developer">寄信給開發者</string>
     <string name="nav_settings">設定</string>
+    <string name="New_password_sent_to_your_email">新密碼已發送</string>
+    <string name="Please_enter_your_email_address">請輸入你的電子郵件</string>
 
     <string name="menu_home">主畫面</string>
     <string name="menu_gallery">Gallery</string>
