--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_login">登入系統</string>
+	<string name="menu_logout">登出系統</string>
     <string name="menu_medicine_box">個人藥物資料庫</string>
     <string name="menu_medicine">藥物資料查詢</string>
     <string name="menu_memory">跌倒記錄查詢</string>
@@ -48,6 +49,7 @@
     <string name="registration_form">註冊表單</string>
     <string name="user_name">使用者名稱</string>
     <string name="password">密碼</string>
+	<string name="password_check">確認密碼</string>
     <string name="real_name">姓名</string>
     <string name="phone">電話</string>
     <string name="address">住址</string>
