--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
 	<string name="menu_forget_password">忘記密碼</string>
 	<string name="menu_video">即時影像</string>
 
+	<string name="capture_button">即時影像</string>
 	<string name="enter_email">請輸入您的電子郵件地址</string>
 	<string name="send_out">發送</string>
 	<string name="please_enter_email">請輸入您的電子郵件以接收重置密碼指示</string>
