20240609-緊急連絡人API連接

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
 	<string name="menu_registration">註冊介面</string>
 	<string name="menu_calender_thing">行事曆事件</string>
 	<string name="menu_medicine_allbox">藥物總覽查詢</string>
+	<string name="menu_contact_list">緊急連絡人列表</string>
 	<string name="menu_user_data">個人檔案</string>
 	<string name="menu_user_set">系統設定</string>
 	<string name="menu_password_change">修改密碼</string>
